@@ -18,12 +18,14 @@ import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
+import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JTextField;
 import javax.swing.WindowConstants;
 
 import frsf.isi.died.app.dao.MaterialCapacitacionDaoDefault;
 import frsf.isi.died.tp.modelo.productos.Libro;
+import frsf.isi.died.tp.modelo.productos.MaterialCapacitacion;
 import frsf.isi.died.tp.modelo.productos.Relevancia;
 import frsf.isi.died.tp.modelo.productos.Video;
 
@@ -84,7 +86,7 @@ public class ActualizarVideo2 extends JPanel{
 		txtDuracion = new JTextField();
 		txtDuracion.setColumns(5);
 		gridConst.gridx=3;
-		txtDuracion.setText(paraActualizar.precio().toString());
+		txtDuracion.setText(paraActualizar.getDuracion().toString());
 		this.add(txtDuracion, gridConst);
 		
 		lblRelevancia= new JLabel("Relevancia: ");
@@ -135,10 +137,6 @@ public class ActualizarVideo2 extends JPanel{
 		
 		btnGuardarCambios.addActionListener(new ActionListener() {
 			
-			//List<List<String>> nuevoContenido = new ArrayList<>();
-		
-			
-			
 			@Override
 			public void actionPerformed(ActionEvent e) {
 				
@@ -151,32 +149,40 @@ public class ActualizarVideo2 extends JPanel{
 				
 				
 				if(!txtTitulo.getText().isEmpty() && !txtCosto.getText().isEmpty() && !txtDuracion.getText().isEmpty() && !txtID.getText().isEmpty()) {
-					
-					Double costo = new Double(txtCosto.getText());
-					Integer duracion = new Integer(txtDuracion.getText());
-					Integer id = new Integer(txtID.getText());
-					
-					Relevancia aux;
-					if(relevancia2.getSelectedIndex()==0){
-						aux=Relevancia.ALTA;
-					}else {
-						if(relevancia2.getSelectedIndex()==1){
-							aux=Relevancia.MEDIA;
-						}else {
-							 aux=Relevancia.BAJA;
+					boolean b=false;
+					for(MaterialCapacitacion m : ventana.getMateriales().listaMateriales()) {
+						if(m.getId().equals(Integer.valueOf(txtID.getText())) && !(m.getId().equals(idAnterior))) {
+							b=true;
 						}
 					}
-					
-					Video nuevoVideo = new Video(id, txtTitulo.getText(), costo, duracion, aux, fecha, tema);
-					ventana.getMateriales().actualizarMaterial(paraActualizar, nuevoVideo);
-					ventana.getMateriales().modificarArchivoVideo(ventana);
-					ventana.setContentPane(new Inicio(ventana));
-					ventana.pack();
-					
-					
-					
-					
-					
+					if(b) {
+						JOptionPane noEligio = new JOptionPane();
+						noEligio.showConfirmDialog(ventana, "Ese ID no esta libre", "Error", JOptionPane.DEFAULT_OPTION, JOptionPane.ERROR_MESSAGE);
+					}else {
+						Double costo = new Double(txtCosto.getText());
+						Integer duracion = new Integer(txtDuracion.getText());
+						Integer id = new Integer(txtID.getText());
+						
+						Relevancia aux;
+						if(relevancia2.getSelectedIndex()==0){
+							aux=Relevancia.ALTA;
+						}else {
+							if(relevancia2.getSelectedIndex()==1){
+								aux=Relevancia.MEDIA;
+							}else {
+								 aux=Relevancia.BAJA;
+							}
+						}
+						
+						Video nuevoVideo = new Video(id, txtTitulo.getText(), costo, duracion, aux, fecha, tema);
+						ventana.getMateriales().actualizarMaterial(paraActualizar, nuevoVideo);
+						ventana.getMateriales().modificarArchivoVideo(ventana);
+						ventana.setContentPane(new Inicio(ventana));
+						ventana.pack();
+					}		
+				}else {
+					JOptionPane noEligio = new JOptionPane();
+					noEligio.showConfirmDialog(ventana, "Faltan campos por completar", "Error", JOptionPane.DEFAULT_OPTION, JOptionPane.ERROR_MESSAGE);
 				}
 			}
 		});
